2020-05-31 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4-math.4ht): added default definition for
	\:RestoreMathjaxCatcodes.
	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht): fix \sum in TOC.
	https://puszcza.gnu.org.ua/bugs/index.php?468

2020-05-27 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex,
	* tex4ht-fonts-modern.tex,
	* tex4ht-fonts-4hf.tex (
	./tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lm/lm-qx/lm-qx.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/iwona/greek-iwona.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/libertine/fxlr-xl-03.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/libertine/fxlr-xl-ts1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/lm-qxtt.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/lm-ts1.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/pxfonts/rpcxr.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/tibetan/ctib.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/tipa/xipx.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/txfonts/rtcxr.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/txfonts/rtcxss.htf
	./tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/txfonts/tcxb.htf
	): fixed wrong XML entites. 
	* tex4ht-4ht.tex (awesomebox.4ht),
	* tex4ht-html4.tex (html4.4ht): basic support for the awesomebox package.
	https://tex.stackexchange.com/a/546570/2891

2020-05-25 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): load Unicode definitions when script
	option for language selection is used in Polyglossia.
	https://github.com/reutenauer/polyglossia/issues/419

2020-05-22 Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht, caption.4ht): fixes for the Caption package.
	https://tex.stackexchange.com/q/545582/2891
	* tex4ht-html4.tex (html4.4ht): use <pre> element for the verbatim
	environment.
	* tex4ht-4ht.tex (amsart.4ht, amsbook.4ht, amsproc.4ht): fixed spurious
	footnotes for \thanks command.

2020-05-20 Michal Hoftich  <michal.h21@gmail.com>
