@@ -1,0 +1,10 @@
+% public domain. values substituted from ./Makefile to make tex4ht-dir.tex.
+\def\HOME{./homedir()/}
+\def\DTDS{./dtd.dir/}           
+\def\WORK{./wd()/src/}
+\def\LIB{./wd()/bin/}
+\def\SOURCE{./htmldir()/}
+\def\XTPIPES{./xtpipesdir()/}
+\def\TEXMFTEXivHT{\HOME texmf/tex/generic/tex4ht/}
+\def\TEXMFTEXivBIN{\HOME texmf_t4ht_bin()/}
+\def\TEXMFTEXivXTPIPES{\HOME texmf/tex4ht/xtpipes/}
