@@ -1,4 +1,0 @@
-% public domain.
-\def\HOME{./tex4ht.dir/}
-\def\DTDS{./dtd.dir/}           
-\def\SOURCE{./html.dir/}
