@@ -1,3 +1,14 @@
+2020-05-31  Vincent_Bela\"iche  <vincent.belaiche@gmail.com>
+
+	* tex4ht-dir.m4: new file, used to generate with m4:
+	* tex4ht-dir.tex: generate, with java-related directories too.
+	* Makefile (tex4ht-dir.tex): do the generation.
+	(dirs): new variable, list of dirs to substitute.
+	(common_no_cond_sty): add tex4ht-dir.tex.
+	(tex4ht_docbook_xtpipes_derived, many others): use new directory vars
+	for .java file locations, etc.
+	(xtpipes.jar, tex4ht.jar, jar): new targets.
+
 2020-05-31 Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-html4.tex (html4-math.4ht): added default definition for
